<resources>
    <string name="app_name">ShoppingApplication</string>
    <string name="showCase">Vitrin</string>
    <string name="productDetail">İlan detayı</string>
    <string name="adTitle">Başlık *</string>
    <string name="productPrice">Fiyat *</string>
    <string name="productDesc">Açıklama *</string>
    <string name="product_image_info">Product Image</string>
    <string name="image_text_info">Galeriden görsel seçiniz ya da görsel adresi ekleyiniz</string>
    <string name="image_adress">Görsel Adresi</string>
    <string name="product_add">İlan Ekle</string>
    <string name="ad_category">Kategori *</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_to_basket">Sepete Ekle</string>
    <string name="complete_order">Alışverişi Tamamla</string>
    <string name="total_price">Toplam Tutar:</string>
    <string name="credit_cart_payment">Kredi Kartı İle Ödeme</string>
    <string name="remittance_payment">Havale İle Ödeme</string>
    <string name="adress_text">Teslimat Adresi</string>
    <string name="cargo_text">KARGO</string>
    <string name="free_cargo_text">Ücretsiz,3 iş günü içinde</string>
    <string name="ad_management">İLAN YÖNETİMİ VE RAPORLAR</string>
    <string name="personal">Bana Özel</string>
    <string name="messages">Mesajlar</string>
    <string name="favorites">Favoriler</string>

    <string-array name="adManagement">
        <item>Yayında Olanlar</item>
        <item>Yayında Olmayanlar</item>
    </string-array>
    <string-array name="Messages">
        <item>İlan Mesajları</item>
        <item>GeT Mesajları</item>
        <item>Bilgilendirmeler</item>
    </string-array>
    <string-array name="Favorites">
        <item>Favori İlanlar</item>
        <item>Favori Aramalar</item>
        <item>Favori Satıcılar</item>
    </string-array>
</resources>